<resources>
    <string name="app_name">AXolotl</string>
    <string name="Proof">Proof</string>
    <string name="UnificationSign">\??</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="InstanceTagText">Instance</string>
    <string name="TermTag">Term</string>
    <string name="VariableTagString">Variable</string>
    <string name="VariableX">x</string>
    <string name="VariableY">y</string>
    <string name="variableZ">z</string>
    <string name="ProblemTag">Problem and Rules</string>
    <string name="FutureState">Resulting Problem State</string>
    <string name="ObserveMode">Observation Mode</string>
    <string name="problemmenu">Problems</string>
    <string name="PropLogic">Propositional Logic</string>
    <string name="Prop01">Prop 01</string>
    <string name="ModalLogic">Modal Logic</string>
    <string name="RuleAppliedTag">Matching Substitution</string>
    <string name="CurrentTermConstructionTag">Term State</string>
    <string name="AllowedFunctionSymbolsTag">Function Symbols</string>
    <string name="UnifyTag">Terms To Match</string>
    <string name="SubstitutionTag">Current Substitution</string>
    <string name="RightBacket">}</string>
    <string name="LeftBrack">{</string>
    <string name="RuleList">Rule List</string>
    <string name="SubstitutionTerm">Substitution Term</string>
    <string name="FunctionSymbols">Function Symbols</string>
    <string name="ApplyRule">Apply</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="SelectedHole">⚫</string>
    <string name="ConstructedTermTag">Constructed Term</string>
    <string name="VariableListTag">Variable List</string>
    <string name="SubstitutionList">Substitution List</string>
    <string name="termmatchingmenu">Term Matching</string>
    <string name="nonclassical">Non-Classical</string>
    <string name="changeinstate">Change in Problem State</string>
    <string name="axolotl_character_image">Axolotl Character Image</string>
    <string name="axolotl_character_head">AXolotl Character Head</string>
    <string name="problem">Problem</string>
    <string name="text_size">Text Size</string>
    <string name="view_proof">View Proof</string>
    <string name="proof_button_menu_symbol">Proof button menu Symbol</string>
    <string name="problem_button_menu_symbol">Problem button menu symbol</string>
    <string name="classical_logic">Classical Logic</string>
    <string name="non_classical_logic">Non-Classical Logic</string>
    <string name="hilbert_style">Hilbert Style</string>
    <string name="sequent_style">Sequent Style</string>
    <string name="axolotl_for_landlayout">AXolotl for LandLayout</string>
    <string name="equal_sign">equal sign</string>
    <string name="help">HELP</string>
    <string name="acknowledgements"> <b>Acknowledgements</b></string>
    <string name="on_load_screen">On load screen</string>
    <string name="natural_deduction">Natural Deduction</string>
    <string name="helpcounterstring">%1s/24</string>
    <string name="about1">The development of this application was partially funded by the Linz Institute of
    Technology (<a href="https://www.jku.at/linz-institute-of-technology/">LIT</a>) SEED Project <a href="http://fmv.jku.at/logtechedu/">LOGTECHEDU</a>
     hosted by the Institute for Formal Methods and Verification (<a href="http://fmv.jku.at/">FMV</a>)
     and the Research Institute of Symbolic Computation (<a href="https://risc.jku.at/">RISC</a>)  of the
    Johannes Kepler University (<a href="https://www.jku.at/">JKU</a>).
    </string>
    <string name="goal"> <b>Goal</b></string>
    <string name="about2"> To provide students of computer science and possibly other subjects
    with a game-like self-study environment which they can use to familiarize themselves with the basic
    concepts of formal reasoning, formal logic, and term re-writing systems.    </string>
    <string name="members"><b>Members</b></string>
    <string name="about3">
    <a href="https://risc.jku.at/m/david-cerna/">David M. Cerna</a> is a member of the LOGTECHEDU project.
    He provided the conceptual design, architecture, and managed the development.
    \n
    <a href="http://www.kr.tuwien.ac.at/staff/rkiesel/">Rafael Kiesl</a> is a PhD student of the computational
    logic program at the Technical University
    of Vienna. He contributed to the project as a software developer.
    \n
    <a href="http://alexandradzh.com/about">Alexandra Dzhyganska</a> is a graphic designer and illustrator. She provided the look and feel
    of the application and various design elements.</string>
    <string name="help001">Welcome to <b>AXolotl</b> a self-study tool for formal reasoning.
    When AXolotl is first opened the above screenshot is displayed. To start solving problems
     click on the "hamburger" menu <b>☰</b> or the "kebap" menu <b>⋮</b> to choose a
        problem from the library or open a problem file. \n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
    <string name="help002">Click on <b>⋮</b> results in the above screenshot.
        If you have not started a problem you may click on <b>Load Problem</b>
        to open an AXolotl compatible file. If you have finished your problem you have an option to save the
        proof as a jpeg image by clicking on <b>Save Proof Picture</b> or as a latex file by clicking on
        <b>Save Latex Proof to Clipboard</b>. The other options are probably familiar to you already, namely,
        <b>Help</b> and <b>About</b>. \n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
    <string name="help003">Clicking on <b>☰</b> results in the above screenshot. If you have not
        started a problem, clicking on <b>Problem</b> will
        return you to the initial screen. Otherwise, clicking on <b>Problem</b> returns you to the problem
        screen which we will visit shortly. Click on <b>View Proof</b> will bring you to proof viewer
        which is currently empty (unless you have started a problem). The next two
        options concern the process of solving a chosen problem. \n\n
          When the AXolotl loads <b>observation mode</b> is activated. This means that AXolotl will provide
        you with all the details of your progress when solving a problem. Once you get use to the interface,
        problem solving, and understand how a given formal system works you may choose to deactivate
        observation mode. In this case AXolotl will only inform you when it requires action from you.
        Concerning <b>Text size</b>, when the AXolotl loads the text size is set to 30sp. You can adjust the
        text size to any size between 10sp and 50sp. The remaining options concern the standard problem library.
        In particular we will click on <b>Classical Logic</b>.\n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
    <string name="help004">
        Clicking on  <b>Classical Logic</b> opens the problem library displayed in the above screenshot.
        Notice that the problem library is separated into three sections,  <b>Hilbert Style</b>,  <b>Sequent Style</b>,
        and  <b>Natural Deduction</b>. These are the three major proof systems handled by Axolotl. In order to illustrate
        the entire process of solving a problem using AXolotl we will click on the first problem of the <b>Natural Deduction</b>
        problem library.\n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
    <string name="help005">
        Clicking on a problem opens the problem display. Above the AXolotl mascot is a list of <b>open goals</b> and below the
        mascot is a list of available <b>rules</b> which may be applied to the goals. Note that a rule may only be applied to
        a single goal from the goal list. By Δ, we abbreviate any goals which are not to be considered for the current
        rule application. The statement on the left side of <font color="#EF4665">➡</font> is to be <b>matched</b>
        (will be explained shortly) with the selected goal while the statements on the right side of <font color="#EF4665">➡</font>
        will replace the current goal. Note that the right side may be empty in which case the goal set\'s size decreases.\n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
    <string name="help006">
        A  <b>goal</b> is selected by clicking on it. Only one goal may be selected at a time. \n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
    <string name="help007">
        Similarly, a <b>rule</b> is selected by clicking on it. Only one rule may be selected at a time. Now that both a rule
        and a goal are selected we may apply the rule to the given goal by swiping right. If the rule is not applicable, AXolotl
        will warn you that the rule application is invalid. Otherwise, AXolotl will switch to the match display or instantiation
        display depending on the problem.\n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
    <string name="help008">
        The match display is split into two parts. The top section displays how the left side of the chosen rule matches the
        chosen goal. Notice that the variable <font color="#EF4665">x</font> is highlighted within the left side of the chosen
        rule. This highlighting matches the sub-term of the chosen goal which matches the variable. The lower section displays
        the substitution isolated from the left side of the chosen rule and the chosen goal. Swiping left on the matching display
        goes back to the previous matching display, instantiation display, or problem display, depending on the current state.
        Swiping right moves on to the next  matching display or instantiation display, or if a substitution has been constructed
        for every variable, AXolotl returns to the problem display with the chosen goal replaced by the instantiated right side of
        the chosen rule.
        \n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
    <string name="help009">
        Swiping right on the matching display loads the next matching display until all variable instantiations have been exhausted.
        \n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
    <string name="help010">
        A special character which will show up time and time again is ε denoting the empty list. Whenever the chosen does not
        contain an appropriate term to instantiate the variable by and one is required the empty list is chosen. Note that this
        differs from the case can a rule is not applicable. AXolotl will take care of differentiating the two cases.
        \n\n
    To move onto the next section of this tutorial <b>swipe right</b>. To go back to
    an earlier section <b>swipe left</b>. </string>
</resources>