<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navigationMenuColor"
    android:orientation="vertical"
    app:itemTextColor="@color/navigationMenuTextColor">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:background="@drawable/menuimagebackground"
        android:contentDescription="@string/axolotl_character_head"
        android:padding="15dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:srcCompat="@drawable/axolotlhead" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/problembuttonlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="35dp"
                    android:contentDescription="@string/problem_button_menu_symbol"
                    app:srcCompat="@drawable/unieqhdpi" />

                <TextView
                    android:id="@+id/Problembutton"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/problem"
                    android:textColor="#FDFDFE"
                    android:textSize="14sp"
                    android:title="@string/problem" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/Proofbuttonlayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="35dp"
                    android:contentDescription="@string/proof_button_menu_symbol"
                    app:srcCompat="@drawable/proof" />

                <TextView
                    android:id="@+id/ViewProof"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="35dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/view_proof"
                    android:textColor="#FDFDFE"
                    android:textSize="14sp"
                    android:title="@string/view_proof" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/observeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/observeswitchformenu"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="26dp"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:theme="@style/MyCustomSwitchTheme" />

                <TextView
                    android:id="@+id/observation"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="27dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/ObserveMode"
                    android:textColor="#FDFDFE"
                    android:textSize="14sp"
                    android:title="@string/ObserveMode" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Adjusttextsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/Adjusttextseeker"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:max="50"
                    android:progress="25"
                    android:theme="@style/MyCustomSwitchTheme" />

                <TextView
                    android:id="@+id/textsize"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/text_size"
                    android:textColor="#FDFDFE"
                    android:textSize="14sp"
                    android:title="@string/text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/TermMatchingbuttonlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    android:contentDescription="@string/proof_button_menu_symbol"
                    app:srcCompat="@drawable/termequalmenu" />

                <TextView
                    android:id="@+id/TermMatchingProblems"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/termMatchingMenu"
                    android:textColor="#FDFDFE"
                    android:textSize="14sp"
                    android:title="@string/termMatchingMenu" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/classicbuttonlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/proof_button_menu_symbol"
                    app:srcCompat="@drawable/classical" />

                <TextView
                    android:id="@+id/PropositionalProblems"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/classical_logic"
                    android:textColor="#FDFDFE"
                    android:textSize="14sp"
                    android:title="@string/classical_logic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nonclassicbuttonlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="32dp"
                    android:contentDescription="@string/proof_button_menu_symbol"
                    app:srcCompat="@drawable/modal" />

                <TextView
                    android:id="@+id/nonclassical"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="28dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/ModalLogic"
                    android:textColor="#FDFDFE"
                    android:textSize="14sp"
                    android:title="@string/non_classical_logic" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
