<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermConstructActivity"
    tools:showIn="@layout/app_term_bar_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/OuterLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MatchDisplayActivity">

        <TextView
            android:id="@+id/ruleInstanceTag2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="@color/LabelColor"
            android:gravity="center"
            android:text="@string/CurrentTermConstructionTag"
            android:textColor="#FDFDFE"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@+id/TermInstanceDisplay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RightSideTerm" />

        <ScrollView
            android:id="@+id/RightSideTerm"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:fillViewport="true"
            android:overScrollMode="ifContentScrolls"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarDefaultDelayBeforeFade="0"
            android:scrollbars="vertical|none"
            app:layout_constraintBottom_toTopOf="@+id/ruleInstanceTag2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/problemTag3">

            <LinearLayout
                android:id="@+id/RightSideTermLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:id="@+id/problemTag3"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="@color/LabelColor"
            android:gravity="center"
            android:text="@string/changeinstate"
            android:textColor="#FDFDFE"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/TermSelectionDisplay"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fadeScrollbars="false"
            android:hapticFeedbackEnabled="true"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FunctionSymbolTag">

            <LinearLayout
                android:id="@+id/TermSelectionLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:orientation="horizontal"
                android:paddingEnd="32dp" />
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/TermInstanceDisplay"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:fadeScrollbars="false"
            android:foregroundGravity="center"
            android:isScrollContainer="true"
            android:keepScreenOn="true"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            app:layout_constraintBottom_toTopOf="@+id/FunctionSymbolTag"
            app:layout_constraintEnd_toStartOf="@+id/UndoButtonTerm"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ruleInstanceTag2">

            <LinearLayout
                android:id="@+id/TermInstancceLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:minWidth="75dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TermDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:layoutDirection="inherit"
                    android:minWidth="75dp"
                    android:scrollbars="none"
                    android:text="@string/SelectedHole"
                    android:textColor="#000001"
                    android:textSize="36sp" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/FunctionSymbolTag"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="@color/LabelColor"
            android:gravity="center"
            android:text="@string/AllowedFunctionSymbolsTag"
            android:textColor="#FDFDFE"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@+id/TermSelectionDisplay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TermInstanceDisplay" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/UndoButtonTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hapticFeedbackEnabled="true"
            android:scaleX=".6"
            android:scaleY=".6"
            app:backgroundTint="#C87191"
            app:layout_constraintBottom_toBottomOf="@+id/TermInstanceDisplay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/TermInstanceDisplay"
            app:layout_constraintTop_toTopOf="@+id/TermInstanceDisplay"
            app:srcCompat="@drawable/undoxhdpi" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:maxWidth="200dp">

        <include layout="@layout/drawer_menu_layout" />
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>